fix(browse): align creating a room with rooms

--- a/frontend/src/views/Browse/style.scss
+++ b/frontend/src/views/Browse/style.scss
@@ -4,8 +4,8 @@
   padding-top: 50px;
   padding-bottom: 50px;
 
-  margin-left: 5%;
-  margin-right: 5%;
+  margin-left: 7.5%;
+  margin-right: 7.5%;
 }
 
 .rooms {
